[package]
authors = [
  "Kalev Anri Kalda",
  "Alex Maslakov <me@gildedhonour.com>, <abc@nothingness.xyz>"
]
description = "JWT Implementation in Rust. Fork of frank_jwt."
documentation = "https://github.com/koala-kalda/honest_jwt"
homepage = "https://github.com/koala-kalda/honest_jwt"
keywords = ["jwt", "json", "token", "encryption"]
license = "Apache-2.0"
name = "honest_jwt"
readme = "readme.md"
repository = "https://github.com/koala-kalda/honest_jwt"
version = "0.1.0"

[dependencies]
base64 = "0.9.0"
openssl = "^0.10"
serde = "^1"
serde_json = "^1"
